# advent-of-code-2025

./: .gitignore  .pre-commit-config.yaml  .rustftml.toml  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: pre-commit.yml  tests.yml
src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  lib.rs  main.rs  utils.rs
