[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.5.52", features = ["derive"] }
lazy_static = "~1.5.0"
itertools = "~0.14.0"
num = "~0.4.0"
dotenv = "~0.15.0"
reqwest = {version="~0.12.24", features=["blocking"]}
ndarray = "~0.17.1"
regex = "~1.12.2"
nom = "~8.0.0"
